--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="wrapper">
             <div class="left">
                 <div class="logo">
-                <img src="LinkedIn logo.png" alt="No image">
+                <img src="LinkedIn logo.png" alt="No image" height="37" width="37">
                 </div>
                 <div class="input">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="search" placeholder="search for job, skills and companies...">
+                    <input type="search" placeholder="Search">
                 </div>
             </div>
             <div class="right">
@@ -31,6 +31,23 @@
                     <i class="fa-solid fa-user-group"></i>
                     <h6>My network</h6>
                 </div>
+                <div class="jobs">
+                    <i class="fa-solid fa-suitcase"></i>
+                    <h6>Jobs</h6>
+                </div>
+                <div class="message">
+                    <i class="fa-solid fa-comment-dots"></i>
+                    <h6>Messaging</h6>
+                </div>
+                <div class="notification">
+                    <i class="fa-sharp fa-solid fa-bell"></i>
+                    <h6>Notification</h6>
+                </div>
+                <div class="me">
+                    <img src="./Profile image.png" alt="Profile image" height="24" width="24"><br>
+                    <i class="fa-solid fa-caret-down"></i></a>
+                </div>
+                <a href="#">Try Premium free for 1 month</a>
             </div>
         </div>
     </nav>
