--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
 
 
-                <video width="98%" autoplay>
+                <video width="98%" controls>
                     <source src="./Demo post video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -350,6 +350,56 @@
                     </div>
                 </div>
 
+            </div>
+
+
+            <div class="new_news" style="height: 70vh;">
+
+                <div class="news">
+                    <h5>Add to your feed</h5>
+                    <i class="fa-sharp fa-solid fa-circle-info"></i>
+                </div>
+                <div class="latest_news">
+                    <div class="one">
+                        <img src="./unilever logo.png" alt="">
+                        <h5>Unilever</h5>
+                    </div>
+                    <div class="two">
+                        <small>Company-Consumer Goods</small>
+                    </div>
+                    <div class="follow">
+                        + Follow
+                    </div>
+                </div>
+                <hr>
+                <div class="latest_news">
+                    <div class="one">
+                        <img src="./LinkedIn logo.png" alt="">
+
+                        <h5>LinkedIn</h5>
+                    </div>
+                    <div class="two">
+                        <small>Company - internet</small>
+                    </div>
+                    <div class="follow">
+                        + Follow
+                    </div>
+                </div>
+
+                <hr>
+                <div class="latest_news">
+                    <div class="one">
+                        <img src="./myntra logo.jpg" alt="">
+
+                        <h5>Myntra</h5>
+                    </div>
+                    <div class="two">
+                        <small>Company - internet</small>
+                    </div>
+                    <div class="follow">
+                        + Follow
+                    </div>
+                </div>
 
             </div>
 
